@@ -2,8 +2,8 @@ dnl build by dist/s_version
 
 VERSION_MAJOR=3
 VERSION_MINOR=2
-VERSION_PATCH=0
-VERSION_STRING='"WiredTiger 3.2.0: (May  9, 2019)"'
+VERSION_PATCH=1
+VERSION_STRING='"WiredTiger 3.2.1: (August 27, 2019)"'
 
 AC_SUBST(VERSION_MAJOR)
 AC_SUBST(VERSION_MINOR)
