@@ -6,9 +6,9 @@ WiredTiger is an high performance, scalable, production quality, NoSQL,
 @section releases Releases
 
 <table>
-@row{<b>WiredTiger 3.2.0</b> (current),
-	<a href="releases/wiredtiger-3.2.0.tar.bz2"><b>[Release package]</b></a>,
-	<a href="3.2.0/index.html"><b>[Documentation]</b></a>}
+@row{<b>WiredTiger 3.2.1</b> (current),
+	<a href="releases/wiredtiger-3.2.1.tar.bz2"><b>[Release package]</b></a>,
+	<a href="3.2.1/index.html"><b>[Documentation]</b></a>}
 @row{<b>WiredTiger 3.1.0</b> (previous),
 	<a href="releases/wiredtiger-3.1.0.tar.bz2"><b>[Release package]</b></a>,
 	<a href="3.1.0/index.html"><b>[Documentation]</b></a>}
